--- a/Sample Project/bin-debug/FlexUnitApplication.html
+++ b/Sample Project/bin-debug/FlexUnitApplication.html
@@ -44,11 +44,11 @@
             params.allowscriptaccess = "sameDomain";
             params.allowfullscreen = "true";
             var attributes = {};
-            attributes.id = "FlexUnitCompilerApplication";
-            attributes.name = "FlexUnitCompilerApplication";
+            attributes.id = "FlexUnitApplication";
+            attributes.name = "FlexUnitApplication";
             attributes.align = "middle";
             swfobject.embedSWF(
-                "FlexUnitCompilerApplication.swf", "flashContent", 
+                "FlexUnitApplication.swf", "flashContent", 
                 "100%", "100%", 
                 swfVersionStr, xiSwfUrlStr, 
                 flashvars, params, attributes);
@@ -74,14 +74,14 @@
         </div>
 	   	
        	<noscript>
-            <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="100%" height="100%" id="FlexUnitCompilerApplication">
-                <param name="movie" value="FlexUnitCompilerApplication.swf" />
+            <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="100%" height="100%" id="FlexUnitApplication">
+                <param name="movie" value="FlexUnitApplication.swf" />
                 <param name="quality" value="high" />
                 <param name="bgcolor" value="#ffffff" />
                 <param name="allowScriptAccess" value="sameDomain" />
                 <param name="allowFullScreen" value="true" />
                 <!--[if !IE]>-->
-                <object type="application/x-shockwave-flash" data="FlexUnitCompilerApplication.swf" width="100%" height="100%">
+                <object type="application/x-shockwave-flash" data="FlexUnitApplication.swf" width="100%" height="100%">
                     <param name="quality" value="high" />
                     <param name="bgcolor" value="#ffffff" />
                     <param name="allowScriptAccess" value="sameDomain" />
